# portfolio-fastapi

./: .gitignore  main.py  pyproject.toml  requirements.txt  start.py  vercel.json
assets/: colors.md
portfolio/: main.py  utils.py
portfolio/views/: base.py  home.py
templates/: home.html  index.jinja  project-card.jinja
templates/components/: base.jinja  home_projects_card.jinja
templates/home/: about.jinja  presentation.jinja  projects.jinja
