[tool.poetry]
name = "portfolio-guilhermwn"
version = "0.1.0"
description = ""
authors = ["Guilhermwn <limaoplaykglp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
htpy = "^24.8.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
